# mypydot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: main.yml  publish.yml
mypydot/: app.py  cfg.py
mypydot/src/: __main__.py  app.py  cfg.py  installer.py  main.py
mypydot/src/view/: components.py  render.py  style.py
mypydot/template/: .conf.yml
tests/unit/: test_app.py  test_cfg.py  test_file_manager.py  test_installer.py  test_logging.py  test_main.py  test_render.py  test_smlink.py
tests/unit/assets/: brew_mock  empty_mock_conf.yml  mock_cfg.yml  mock_conf.yml
