[tool.poetry]
name = "mypydot"
version = "0.1.0"
description = ""
authors = ["andrs.ortizl@gmail.com"]


[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "6.0"
coverage-badge = "^1.1.0"



[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
